unpackaged/main/default/objects/Case/fields/A2subA1__c.field-meta.xml
<CustomField>
    <fullName>A2subA1__c</fullName>
    <description>System field used to calculate the total time open. Stops counting when closed.</description>
    <formula>NOW()- CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A2subA1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>