unpackaged/main/default/objects/Case/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account.ORACLE_AR_CUST_NUMBER__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account #</label>
    <type>Text</type>
</CustomField>