unpackaged/main/default/objects/Case/fields/Account_VIP_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_VIP_Status__c</fullName>
    <description>If the Exhibition Account  VIP field is checked, feedback is displayed. Otherwise the output is &quot;Normal.&quot;</description>
    <formula>IF(Account.VIP_Client__c , &quot;VIP - High Profile&quot;, &quot;Normal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account VIP Status</label>
    <type>Text</type>
</CustomField>