unpackaged/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Case age in number of days including weekdays only. Excludes weekends, but does not exclude holidays.</description>
    <formula>If(IsNull(ClosedDate),

CASE(MOD(DateValue(CreatedDate) - DATE(1985,6,24),7), 0,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 ,
CASE( MOD( Today() - DateValue(CreatedDate), 7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( Today() - DateValue(CreatedDate) )/7)*5-1) -
IF(OR( RecordType.DeveloperName = &#39;GES_US_Service&#39;, RecordType.DeveloperName = &#39;US_Exhibitor_List&#39;),
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_1),Today() &gt;= DATEVALUE($Label.US_Holiday_1)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_2),Today() &gt;= DATEVALUE($Label.US_Holiday_2)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_3),Today() &gt;= DATEVALUE($Label.US_Holiday_3)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_4),Today() &gt;= DATEVALUE($Label.US_Holiday_4)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_5),Today() &gt;= DATEVALUE($Label.US_Holiday_5)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_6),Today() &gt;= DATEVALUE($Label.US_Holiday_6)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_7),Today() &gt;= DATEVALUE($Label.US_Holiday_7)),1,0),0),

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 ,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6,
CASE( MOD( DateValue(ClosedDate) - DateValue(CreatedDate), 7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999)
+ (FLOOR(( DateValue(ClosedDate) - DateValue(CreatedDate) )/7)*5-1) -

IF(OR( RecordType.DeveloperName = &#39;GES_US_Service&#39;, RecordType.DeveloperName = &#39;US_Exhibitor_List&#39;),
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_1),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_1)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_2),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_2)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_3),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_3)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_4),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_4)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_5),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_5)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_6),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_6)),1,0) -
IF(AND(DateValue(CreatedDate) &lt;= DATEVALUE($Label.US_Holiday_7),DateValue(ClosedDate) &gt;= DATEVALUE($Label.US_Holiday_7)),1,0),
0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Weekdays)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>