unpackaged/main/default/objects/Case/fields/Age_Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Age_Current_Owner__c</fullName>
    <formula>If(IsNull(ClosedDate), 

CASE(MOD(DateValue(Date_Assigned_To_Current_Owner__c) - DATE(1985,6,24),7), 0, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5, 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - DateValue(Date_Assigned_To_Current_Owner__c) )/7)*5-1), 

CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 , 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6, 
CASE( MOD( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c), 7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( DateValue(ClosedDate) - DateValue(Date_Assigned_To_Current_Owner__c) )/7)*5-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Current Owner)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>