unpackaged/main/default/objects/Case/fields/Age_Total__c.field-meta.xml
<CustomField>
    <fullName>Age_Total__c</fullName>
    <formula>IF ( A2subA1__c &gt; 0, 
TEXT(FLOOR( A2subA1__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( A2subA1__c - FLOOR(A2subA1__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( A2subA1__c - FLOOR(A2subA1__c) ),8) - FLOOR( 
ROUND( 24 * ( A2subA1__c - FLOOR(A2subA1__c) ),8)) ),0)) &amp; &quot; mn &quot; 
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Total</label>
    <type>Text</type>
</CustomField>