unpackaged/main/default/objects/Case/fields/Age_When_Last_Edited__c.field-meta.xml
<CustomField>
    <fullName>Age_When_Last_Edited__c</fullName>
    <formula>IF ( D2subD1__c &gt; 0, 
TEXT(FLOOR( D2subD1__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ),8) - FLOOR( 
ROUND( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ),8)) ),0)) &amp; &quot; mn &quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age When Last Edited</label>
    <type>Text</type>
</CustomField>