unpackaged/main/default/objects/Case/fields/Booth__c.field-meta.xml
<CustomField>
    <fullName>Booth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booth on which user requested service</description>
    <label>Booth (Lookup)</label>
    <referenceTo>Oracle_Show_Booth__c</referenceTo>
    <relationshipLabel>Customer Service Inquiries (Cases)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>