unpackaged/main/default/objects/Case/fields/Call_to_case__c.field-meta.xml
<CustomField>
    <fullName>Call_to_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in EMEA to track if this is a call to case. Exhibitor has rang the dedicated number displayed onsite</description>
    <inlineHelpText>Please select this if this is a call to case only</inlineHelpText>
    <label>Call to case</label>
    <type>Checkbox</type>
</CustomField>