unpackaged/main/default/objects/Case/fields/CORE_SQR_ID__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_ID__c</fullName>
    <description>CORE SQR ID</description>
    <label>CORE SQR ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>