unpackaged/main/default/objects/Case/fields/CORE_SQR_Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Last_Sent_Date__c</fullName>
    <description>Send to CORE SQR Date</description>
    <label>CORE SQR Last Sent Date</label>
    <type>DateTime</type>
</CustomField>