unpackaged/main/default/objects/Case/fields/Credit_Memo_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Code__c</fullName>
    <label>Credit Memo Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-Wrong Price/Rate/Quote</fullName>
            </value>
            <value>
                <fullName>02-Wrong Qty/weight/hours</fullName>
            </value>
            <value>
                <fullName>03-Didn’t order</fullName>
            </value>
            <value>
                <fullName>04-Billed wrong cust/Rebill</fullName>
            </value>
            <value>
                <fullName>05-Surchrg/OffTarget/Lte Whse</fullName>
            </value>
            <value>
                <fullName>06-Dupe Billing</fullName>
            </value>
            <value>
                <fullName>07-Insufficient Documentation</fullName>
            </value>
            <value>
                <fullName>08-Wrong Item Billed</fullName>
            </value>
            <value>
                <fullName>09-Supervision charge error</fullName>
            </value>
            <value>
                <fullName>10-Good Faith</fullName>
            </value>
            <value>
                <fullName>11-Bill to Association</fullName>
            </value>
            <value>
                <fullName>12-Cancelled/Didn’t attend</fullName>
            </value>
            <value>
                <fullName>13-Not Used</fullName>
            </value>
            <value>
                <fullName>14-Service Failure/Didn’t rcv</fullName>
            </value>
            <value>
                <fullName>15-Logistics Good Faith</fullName>
            </value>
            <value>
                <fullName>16-Legal Settlement</fullName>
            </value>
            <value>
                <fullName>17-Trans/Disc Not Applied</fullName>
            </value>
            <value>
                <fullName>18-OB /IB Quote not matched</fullName>
            </value>
            <value>
                <fullName>19-Operation Error</fullName>
            </value>
            <value>
                <fullName>20-Order Error</fullName>
            </value>
            <value>
                <fullName>21-Tax Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>