unpackaged/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Enter customer name as free-form text, when Exhibitor/Customer is not available in Salesforce. Field defaulted with same value as the Account Name field, unless Account Name is a generic exhibitor. In which case, this field is required.</description>
    <inlineHelpText>Defaulted with value from Account Name field, for actual exhibitors. For generic customer records (Exhibitor and Non-Exhibitor), value needs to be entered manually.</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>