unpackaged/main/default/objects/Case/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>EAC</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Stand Contractor</fullName>
            </value>
            <value>
                <fullName>Organiser</fullName>
            </value>
            <value>
                <fullName>Service Partner (GES)</fullName>
            </value>
            <value>
                <fullName>Show Management</fullName>
            </value>
            <value>
                <fullName>Non-Tradeshow</fullName>
            </value>
            <value>
                <fullName>SMS Message</fullName>
            </value>
            <value>
                <fullName>SMS Message - Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>