unpackaged/main/default/objects/Case/fields/D2subD1__c.field-meta.xml
<CustomField>
    <fullName>D2subD1__c</fullName>
    <description>System field</description>
    <formula>LastModifiedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D2subD1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>