unpackaged/main/default/objects/Case/fields/Date_Reclosed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reclosed__c</fullName>
    <description>Date the case is initially reclosed after being reopened.</description>
    <label>Date Reclosed</label>
    <type>Date</type>
</CustomField>