unpackaged/main/default/objects/Case/fields/Date_Time_Opened_CORE__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened_CORE__c</fullName>
    <label>Date/Time Opened (CORE)</label>
    <type>DateTime</type>
</CustomField>