unpackaged/main/default/objects/Case/fields/Days_to_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_to_First_Contact__c</fullName>
    <description>The time in days between the time the case was opened and the contact status is changed to &quot;1st Attempt Made.&quot;  Used as a metric in reporting. Goal is 2 days.</description>
    <formula>( First_Contact_Attempt__c - CreatedDate )</formula>
    <label>Days to First Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>