unpackaged/main/default/objects/Case/fields/Delegated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify which on-site service agent this service request should be assigned to.</description>
    <label>Delegated Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>