unpackaged/main/default/objects/Case/fields/Delete_This_Case__c.field-meta.xml
<CustomField>
    <fullName>Delete_This_Case__c</fullName>
    <description>EMEA Delete Case Confirmation</description>
    <label>Delete This Record?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>