unpackaged/main/default/objects/Case/fields/Do_not_survey__c.field-meta.xml
<CustomField>
    <fullName>Do_not_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EMEA field to stop automated surveys being sent</description>
    <inlineHelpText>If this box is not checked a survey may be sent to the customer.</inlineHelpText>
    <label>Do not survey</label>
    <type>Checkbox</type>
</CustomField>