unpackaged/main/default/objects/Case/fields/EMEA_Chase_Count__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Chase_Count__c</fullName>
    <description>This is the number of times the client has chased the ticket</description>
    <inlineHelpText>This is the number of times the client has chased the ticket</inlineHelpText>
    <label>EMEA Chase Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>