unpackaged/main/default/objects/Case/fields/EMEA_Onsite_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Onsite_Service_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this if the service request is being raised by a member of the onsite team</inlineHelpText>
    <label>EMEA Onsite Service Request</label>
    <type>Checkbox</type>
</CustomField>