unpackaged/main/default/objects/Case/fields/EMEA_SOP_Created_By__c.field-meta.xml
<CustomField>
    <fullName>EMEA_SOP_Created_By__c</fullName>
    <description>Created by SOP Username</description>
    <inlineHelpText>Created by SOP Username</inlineHelpText>
    <label>EMEA SOP Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>