unpackaged/main/default/objects/Case/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>Escalated To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9 - Support Desk</fullName>
            </value>
            <value>
                <fullName>8 - None</fullName>
                <default>true</default>
                <label>8 - None</label>
            </value>
            <value>
                <fullName>7 - Order Entry</fullName>
            </value>
            <value>
                <fullName>6 - City</fullName>
            </value>
            <value>
                <fullName>5 - Resolutions</fullName>
            </value>
            <value>
                <fullName>4 - Escalation Rep</fullName>
            </value>
            <value>
                <fullName>3 - Supervisor</fullName>
            </value>
            <value>
                <fullName>2 - Director</fullName>
            </value>
            <value>
                <fullName>1 - Senior Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>