unpackaged/main/default/objects/Case/fields/Exhibitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Name__c</fullName>
    <formula>Booth__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitor Name</label>
    <type>Text</type>
</CustomField>