unpackaged/main/default/objects/Case/fields/Exhibitor_Services_Manager__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Services_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibitor Services Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>