unpackaged/main/default/objects/Case/fields/GES_Type__c.field-meta.xml
<CustomField>
    <fullName>GES_Type__c</fullName>
    <description>!!! To keep SFDC in sync with Oracle, we need to have the CasetoSQRMapping completed as part of that process so that when the case are sent to Oracle, the data is aligned to the requirements in Oracle. Reach out to Bhargavi or Robynn Coulter if you need to add an additional type.!!!  Values constrained by Show Status field selection.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Any/All Services</fullName>
            </value>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
            <value>
                <fullName>Billing Error/Dispute</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Carpet/Flooring Inquiry</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Complaint - Other</fullName>
            </value>
            <value>
                <fullName>Complaint - Rude Staff</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Documentation Request</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Exhibitor List</fullName>
            </value>
            <value>
                <fullName>Floor-Covering</fullName>
            </value>
            <value>
                <fullName>Furnishings</fullName>
            </value>
            <value>
                <fullName>General Event Enquiry/Other</fullName>
            </value>
            <value>
                <fullName>Ghost Call</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Insurance Requests (New Type to Create)</fullName>
                <label>Insurance Requests</label>
            </value>
            <value>
                <fullName>Invoice/Order Confirmation Explanation</fullName>
            </value>
            <value>
                <fullName>Invoice Request</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Logistics/Freight</fullName>
            </value>
            <value>
                <fullName>Logistics Lead</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>MultiService</fullName>
            </value>
            <value>
                <fullName>Nameboards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>