unpackaged/main/default/objects/Case/fields/Hour_Closed__c.field-meta.xml
<CustomField>
    <fullName>Hour_Closed__c</fullName>
    <description>EMEA Field to report on which hours of the day cases are closed within.</description>
    <formula>FLOOR ( MOD( ClosedDate - ($System.OriginDateTime),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>