unpackaged/main/default/objects/Case/fields/Met_2_Day_Contact_Goal__c.field-meta.xml
<CustomField>
    <fullName>Met_2_Day_Contact_Goal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Met 2 Day Contact Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>