unpackaged/main/default/objects/Case/fields/O2subO1__c.field-meta.xml
<CustomField>
    <fullName>O2subO1__c</fullName>
    <description>System field used to calculate the &quot;total time open&quot; field.</description>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O2subO1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>