unpackaged/main/default/objects/Case/fields/Owned_or_Delegated_by_USER__c.field-meta.xml
<CustomField>
    <fullName>Owned_or_Delegated_by_USER__c</fullName>
    <formula>IF(OR(OwnerId = $User.Id,Delegated_Owner__r.Id = $User.Id),
 1,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned or Delegated by $USER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>