unpackaged/main/default/objects/Case/fields/Owner_Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Formula__c</fullName>
    <formula>Owner:User.Manager.FirstName+&quot; &quot;+Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Formula</label>
    <type>Text</type>
</CustomField>