unpackaged/main/default/objects/Case/fields/Owner_role__c.field-meta.xml
<CustomField>
    <fullName>Owner_role__c</fullName>
    <formula>Owner:User.UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner role</label>
    <type>Text</type>
</CustomField>