unpackaged/main/default/objects/Case/fields/QuickComment__c.field-meta.xml
<CustomField>
    <fullName>QuickComment__c</fullName>
    <description>System field used to create case comments from SF1 Action.</description>
    <label>QuickComment</label>
    <type>TextArea</type>
</CustomField>