unpackaged/main/default/objects/Case/fields/Refund_Adj_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Adj_Amount__c</fullName>
    <label>Refund/Adj Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>