unpackaged/main/default/objects/Case/fields/Refund_Adj_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Refund_Adj_Reason_Code__c</fullName>
    <label>Refund/Adj Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
            <value>
                <fullName>Cancelled order</fullName>
            </value>
            <value>
                <fullName>Check/Wire received after Credit Card was Charged</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled from Show</fullName>
            </value>
            <value>
                <fullName>Discount given</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Furnishings/Deco</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Honor discount deadline rates</fullName>
            </value>
            <value>
                <fullName>Install and Dismantle</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Order entry error</fullName>
            </value>
            <value>
                <fullName>Overpayment on account</fullName>
            </value>
            <value>
                <fullName>TSE</fullName>
            </value>
            <value>
                <fullName>Wrong Account Billed</fullName>
            </value>
            <value>
                <fullName>Wrong amount billed to CC</fullName>
            </value>
            <value>
                <fullName>Wrong Credit Card Charged</fullName>
            </value>
            <value>
                <fullName>Missing Item</fullName>
            </value>
            <value>
                <fullName>Not delivered</fullName>
            </value>
            <value>
                <fullName>Not Installed</fullName>
            </value>
            <value>
                <fullName>CH not received paperwork</fullName>
            </value>
            <value>
                <fullName>SD issue</fullName>
            </value>
            <value>
                <fullName>Order not received</fullName>
            </value>
            <value>
                <fullName>Incorrect LOB</fullName>
            </value>
            <value>
                <fullName>Incorrect SC</fullName>
            </value>
            <value>
                <fullName>Damaged/dirty</fullName>
            </value>
            <value>
                <fullName>RGF</fullName>
            </value>
            <value>
                <fullName>Complaint LOB</fullName>
            </value>
            <value>
                <fullName>Complaint SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>