unpackaged/main/default/objects/Case/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System update this field to check if and when a closed case is reopened.</description>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>