unpackaged/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Details Amended</fullName>
            </value>
            <value>
                <fullName>Adjusted Company Name/Address</fullName>
            </value>
            <value>
                <fullName>Adjusted Contact Info</fullName>
            </value>
            <value>
                <fullName>Amended Order</fullName>
            </value>
            <value>
                <fullName>Assisted with Expresso navigation</fullName>
            </value>
            <value>
                <fullName>Assisted with Online Issue</fullName>
            </value>
            <value>
                <fullName>Assisted With Order Forms</fullName>
            </value>
            <value>
                <fullName>Assisted with selection</fullName>
            </value>
            <value>
                <fullName>Assisted with what item to order</fullName>
            </value>
            <value>
                <fullName>Callback Already Resolved</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
            <value>
                <fullName>CAS - EL Rejected / Not Uploaded</fullName>
            </value>
            <value>
                <fullName>CAS - Exhibitor List Booth #&#39;s / Dims Updated</fullName>
            </value>
            <value>
                <fullName>CAS - Initial EL Uploaded</fullName>
            </value>
            <value>
                <fullName>CAS - Revised EL Uploaded</fullName>
            </value>
            <value>
                <fullName>CH not received paperwork</fullName>
            </value>
            <value>
                <fullName>Closed Loop</fullName>
            </value>
            <value>
                <fullName>CM Processed – City Approved</fullName>
            </value>
            <value>
                <fullName>CM Processed – NSC Approved</fullName>
            </value>
            <value>
                <fullName>Complaint LOB</fullName>
            </value>
            <value>
                <fullName>Complaint Onsite</fullName>
            </value>
            <value>
                <fullName>Complaint SC</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Compliment documented</fullName>
            </value>
            <value>
                <fullName>Compliment Received</fullName>
            </value>
            <value>
                <fullName>Confirmed Delivery Address</fullName>
            </value>
            <value>
                <fullName>Confirmed Freight Received</fullName>
            </value>
            <value>
                <fullName>Confirmed Order</fullName>
            </value>
            <value>
                <fullName>Confirmed Order Entered in CORE</fullName>
            </value>
            <value>
                <fullName>Confirmed Order Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>