unpackaged/main/default/objects/Case/fields/Send_CORE_SQR_Status__c.field-meta.xml
<CustomField>
    <fullName>Send_CORE_SQR_Status__c</fullName>
    <description>Send to CORE SQR Status</description>
    <label>Send CORE SQR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>